--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,7 +15,7 @@ body {
 CSS resets
 */
 
-h1,
+/* h1,
 h2,
 h3,
 h4,
@@ -30,4 +30,4 @@ a {
   font-weight: 400;
   color: black;
   text-decoration: none;
-}
+} */
