add font smoothing

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,4 +9,6 @@ body {
     'Roboto', Helvetica, Arial, sans-serif, 'Apple Color Emoji',
     'Segoe UI Emoji', 'Segoe UI Symbol';
   color: black;
+  -webkit-font-smoothing: antialiased;
+  font-smooth: always;
 }
