--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,3 +12,9 @@ body {
   -webkit-font-smoothing: antialiased;
   font-smooth: always;
 }
+
+a:link,
+a:visited,
+a:active {
+  text-decoration: none;
+}
